[package]
name = "incipit"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.6", features = ["tls-rustls"] }
color-eyre = "0.6.3"
http-body-util = "0.1.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
reqwest = "0.12.3"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8.13"
tower = { version = "0.4", features = ["make"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
